--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs",
     "deploy": "yarn build && git add -A . && git commit -am 'redeploy' && git push origin master && gh-pages -d dist"
   },
-  "homepage": "https://goncy.github.io/vue-vuex-todo/",
   "dependencies": {
     "async-action-creator": "^0.0.9",
     "bs58": "^4.0.1",
     "gh-pages": "^0.12.0",
     "ipfs-api": "^22.3.0",
+    "jdenticon": "^2.1.0",
     "ramda": "^0.23.0",
     "vue": "^2.2.2",
     "vue-router": "^2.2.0",
+    "vue-simplemde": "^0.4.8",
     "vuex": "^2.2.1",
     "web3": "^1.0.0-beta.35"
   },
@@ -78,6 +79,7 @@
     "sinon-chai": "^2.8.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
+    "uglifyjs-webpack-plugin": "^1.2.7",
     "url-loader": "^0.5.7",
     "vue-loader": "^11.1.4",
     "vue-style-loader": "^2.0.0",
