--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jdenticon": "^2.1.0",
     "ramda": "^0.23.0",
     "vue": "^2.2.2",
+    "vue-markdown": "^2.2.4",
     "vue-router": "^2.2.0",
     "vue-simplemde": "^0.4.8",
     "vuex": "^2.2.1",
