--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "async-action-creator": "^0.0.9",
     "bs58": "^4.0.1",
     "gh-pages": "^0.12.0",
+    "identicon.js": "^2.3.2",
     "ipfs-api": "^22.3.0",
-    "jdenticon": "^2.1.0",
     "ramda": "^0.23.0",
     "vue": "^2.2.2",
+    "vue-js-modal": "^1.3.16",
     "vue-markdown": "^2.2.4",
     "vue-router": "^2.2.0",
     "vue-simplemde": "^0.4.8",
