--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
-  "name": "vue-todo",
+  "name": "pigeon",
   "version": "1.0.0",
-  "description": "Simple todo in vue",
-  "author": "goncy <goncy@live.com.ar>",
+  "description": "A decentralized commenting platform built with IPFS and Ethereum",
+  "author": "Will Whiteneck",
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
-    "build": "node build/build.js",
-    "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs",
-    "deploy": "yarn build && git add -A . && git commit -am 'redeploy' && git push origin master && gh-pages -d dist"
+    "build": "node build/build.js"
   },
   "dependencies": {
     "bs58": "^4.0.1",
     "identicon.js": "^2.3.2",
     "ipfs-api": "^22.3.0",
+    "lodash.debounce": "^4.0.8",
+    "lodash.throttle": "^4.1.1",
     "vue": "^2.2.2",
     "vue-js-modal": "^1.3.16",
     "vue-markdown": "^2.2.4",
+    "vue-notification": "^1.3.13",
     "vue-simplemde": "^0.4.8",
     "vuex": "^2.2.1",
-    "web3": "^1.0.0-beta.35"
+    "web3": "1.0.0-beta.34"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
@@ -31,13 +32,9 @@
     "babel-preset-env": "^1.2.1",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
-    "chai": "^3.5.0",
     "chalk": "^1.1.3",
-    "chromedriver": "^2.27.2",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
-    "cross-env": "^3.1.4",
-    "cross-spawn": "^5.0.1",
     "css-loader": "^0.26.1",
     "eslint": "^3.14.1",
     "eslint-config-standard": "^6.2.1",
@@ -51,30 +48,12 @@
     "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.10.0",
     "friendly-errors-webpack-plugin": "^1.1.3",
-    "function-bind": "^1.1.0",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
-    "inject-loader": "^2.0.1",
-    "karma": "^1.4.1",
-    "karma-coverage": "^1.1.1",
-    "karma-mocha": "^1.3.0",
-    "karma-phantomjs-launcher": "^1.0.2",
-    "karma-sinon-chai": "^1.2.4",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "0.0.26",
-    "karma-webpack": "^2.0.2",
-    "lolex": "^1.5.2",
-    "mocha": "^3.2.0",
-    "nightwatch": "^0.9.12",
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "ora": "^1.1.0",
-    "phantomjs-prebuilt": "^2.1.14",
-    "rimraf": "^2.6.0",
-    "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
-    "sinon": "^1.17.7",
-    "sinon-chai": "^2.8.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "uglifyjs-webpack-plugin": "^1.2.7",
