--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ipfs-api": "^22.3.0",
     "lodash.debounce": "^4.0.8",
     "lodash.throttle": "^4.1.1",
+    "sanitize-html": "^1.18.4",
     "vue": "^2.2.2",
     "vue-js-modal": "^1.3.16",
     "vue-markdown": "^2.2.4",
