--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "town-square",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A decentralized commenting platform built with IPFS and Ethereum",
   "author": "Will Whiteneck",
-  "private": true,
+  "main": "dist/town-square.js",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "dev": "node build/dev-server.js",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "prepublish": "npm run build"
   },
-  "dependencies": {
+  "devDependencies": {
     "bs58": "^4.0.1",
     "identicon.js": "^2.3.2",
     "ipfs-api": "^22.3.0",
@@ -23,9 +27,7 @@
     "vue-router": "^3.0.1",
     "vue-simplemde": "^0.4.8",
     "vuex": "^2.2.1",
-    "web3": "1.0.0-beta.34"
-  },
-  "devDependencies": {
+    "web3": "1.0.0-beta.34",
     "autoprefixer": "^6.7.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
